@@ -1,3 +1,6 @@
+2011-03-31 lucas
+* Added a new script with business process informations.
+
 2011-03-30 lucas
 * The mixin class called TestLiveConfiguratorWorkflowMixin has been moved to ERP5Configurator/tests/ConfiguratorTestMixin.py.
 * Added tests with Russian configuration.
